@@ -1,21 +1,23 @@
 package com.group2.restaurantorderingwebapp.service.impl;
 
-import com.group2.restaurantorderingwebapp.dto.response.OrderItemResponse;
+import com.group2.restaurantorderingwebapp.dto.response.*;
 import com.group2.restaurantorderingwebapp.entity.*;
 import com.group2.restaurantorderingwebapp.repository.DishRepository;
 import com.group2.restaurantorderingwebapp.repository.OrderRepository;
 import com.group2.restaurantorderingwebapp.repository.PositonRepository;
 import com.group2.restaurantorderingwebapp.repository.UserRepository;
 import com.group2.restaurantorderingwebapp.service.OrderService;
+import com.group2.restaurantorderingwebapp.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import com.group2.restaurantorderingwebapp.dto.request.OrderRequest;
-import com.group2.restaurantorderingwebapp.dto.response.OrderResponse;
 import com.group2.restaurantorderingwebapp.exception.ResourceNotFoundException;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,104 +29,77 @@ public class OrderServiceImpl implements OrderService {
     private final UserRepository userRepository;
     private final PositonRepository positonRepository;
 
+    private final UserService userService;
+
 
     @Override
     public OrderResponse createOrder(OrderRequest orderRequest) {
         Order order = new Order();
+        User user = new User();
         if (orderRequest.getUserId() != null)
         {
-            User user = userRepository.findById(orderRequest.getUserId()).orElseThrow(() -> new ResourceNotFoundException("User", "id", orderRequest.getUserId()));
-            order.setUser(user);
+            user = userRepository.findById(orderRequest.getUserId()).orElseThrow(() -> new ResourceNotFoundException("User", "id", orderRequest.getUserId()));
         }
+        else {
+            LocalDateTime now = LocalDateTime.now();
+            user = userService.createGuestUser("guest"+ now.toString());
+        }
+            order.setUser(user);
         Position position =positonRepository.findById(orderRequest.getPositionId()).orElseThrow(() -> new ResourceNotFoundException("Position", "id", orderRequest.getPositionId()));
         order.setPosition(position);
         order.setStatus(false);
-        Set<OrderItem> orderItems = orderRequest.getDishQuantities().entrySet().stream()
-                .map(entry -> {
-                    Dish dish = dishRepository.findById(entry.getKey()).orElseThrow(() -> new ResourceNotFoundException("Dish", "id", entry.getKey()));
-                    OrderItem orderItem = new OrderItem();
-                    orderItem.setDish(dish);
-                    orderItem.setQuantity(entry.getValue());
-                    orderItem.setOrder(order);
-                    return orderItem;
-                })
-                .collect(Collectors.toSet());
-        Double totalPrice = orderItems.stream()
-                .mapToDouble(orderItem -> orderItem.getDish().getPrice() * orderItem.getQuantity())
-                .sum();
-        Double timeServing = orderItems.stream()
-                .mapToDouble(orderItem -> orderItem.getDish().getCookingTime() * orderItem.getQuantity())
-                .sum();
-        order.setTimeServing(Math.round(timeServing));
-        order.setOrderItems(orderItems);
-        order.setTotalPrice(Math.ceil(totalPrice*100.0)/100.0);
-        orderRepository.save(order);
+        Dish dish = dishRepository.findById(orderRequest.getDishId()).orElseThrow(() -> new ResourceNotFoundException("Dish", "id", orderRequest.getDishId()));
+        order.setDish(dish);
+        order.setQuantity(orderRequest.getQuantity());
+        Long timeServing = dish.getCookingTime()*orderRequest.getQuantity();
+        Double totalPrice = dish.getPrice()*orderRequest.getQuantity();
+        order.setTimeServing(timeServing);
+        order.setTotalPrice(totalPrice);
+        order = orderRepository.save(order);
         OrderResponse orderResponse = modelMapper.map(order, OrderResponse.class);
-        orderResponse.setOrderItems(order.getOrderItems().stream().map(orderItem -> modelMapper.map(orderItem, OrderItemResponse.class)).collect(Collectors.toSet()));
-        if (order.getUser() != null)
-        {
-            orderResponse.setUserId(orderRequest.getUserId());
-        }
-
+        orderResponse.setUser(modelMapper.map(user, UserResponse.class));
+        orderResponse.setDish(modelMapper.map(dish, DishResponse.class));
+        orderResponse.setPosition(modelMapper.map(position, PositionResponse.class));
         return orderResponse;
     }
 
 
     @Override
-    public OrderResponse updateOrderStatus(Long id) {
+    public String updateOrderStatus(Long id) {
         Order order = orderRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Order", "id", id));
         order.setStatus(true);
         orderRepository.save(order);
-        OrderResponse orderResponse = modelMapper.map(order, OrderResponse.class);
-        orderResponse.setOrderItems(order.getOrderItems().stream().map(orderItem -> modelMapper.map(orderItem, OrderItemResponse.class)).collect(Collectors.toSet()));
-        if (order.getUser() != null)
-        {
-            orderResponse.setUserId(order.getUser().getUserId());
-        }
-        return orderResponse;
+
+        return "Updated order status successfully";
     }
 
     @Override
-    public OrderResponse updateOrderUser(Long id, Long userId) {
+    public String updateOrderUser(Long id, Long userId) {
         Order order = orderRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Order", "id", id));
         User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
         order.setUser(user);
         orderRepository.save(order);
-        OrderResponse orderResponse = modelMapper.map(order, OrderResponse.class);
-        orderResponse.setOrderItems(order.getOrderItems().stream().map(orderItem -> modelMapper.map(orderItem, OrderItemResponse.class)).collect(Collectors.toSet()));
-        if (order.getUser() != null)
-        {
-            orderResponse.setUserId(order.getUser().getUserId());
-        }
-        return orderResponse;
+        return "Updated order user successfully";
     }
 
     @Override
     public OrderResponse getOrderById(Long id) {
         Order order = orderRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Order", "id", id));
         OrderResponse orderResponse = modelMapper.map(order, OrderResponse.class);
-        orderResponse.setOrderItems(order.getOrderItems().stream().map(orderItem -> modelMapper.map(orderItem, OrderItemResponse.class)).collect(Collectors.toSet()));
-        if (order.getUser() != null)
-        {
-            orderResponse.setUserId(order.getUser().getUserId());
-        }
         return orderResponse;
     }
 
     @Override
-    public List<OrderResponse> getAllOrders() {
-        List<Order> orders = orderRepository.findAll();
-        return orders.stream()
-                .map(order -> {
-                    OrderResponse orderResponse = modelMapper.map(order, OrderResponse.class);
-                    orderResponse.setOrderItems(order.getOrderItems().stream().map(orderItem -> modelMapper.map(orderItem, OrderItemResponse.class)).collect(Collectors.toSet()));
-                    if (order.getUser() != null)
-                    {
-                        orderResponse.setUserId(order.getUser().getUserId());
-                    }
-                    return orderResponse;
-                })
-                .collect(Collectors.toList());
+    public PageCustom<OrderResponse> getAllOrders(Pageable pageable) {
+       Page<Order> page=orderRepository.findAll(pageable);
+       PageCustom<OrderResponse> pageCustom = PageCustom.<OrderResponse>builder()
+               .pageNo(page.getNumber())
+               .pageSize(page.getSize())
+               .totalPages(page.getTotalPages())
+               .pageContent(page.getContent().stream().map(order->modelMapper.map(order, OrderResponse.class)).toList())
+               .build();
+
+        return pageCustom;
 
     }
 
@@ -134,6 +109,34 @@ public class OrderServiceImpl implements OrderService {
         orderRepository.delete(order);
         return "Deleted order successfully";
     }
+
+    @Override
+    public PageCustom<OrderResponse> getOrdersByPosition(Long positionId, Pageable pageable) {
+        Position position = positonRepository.findById(positionId).orElseThrow(() -> new ResourceNotFoundException("Position", "id", positionId));
+        Page<Order> orders = orderRepository.findAllByPosition(position,pageable);
+        PageCustom<OrderResponse> pageCustom = PageCustom.<OrderResponse>builder()
+                .pageNo(orders.getNumber()+1)
+                .pageSize(orders.getSize())
+                .totalPages(orders.getTotalPages())
+                .pageContent(orders.getContent().stream().map(order->modelMapper.map(order, OrderResponse.class)).toList())
+                .build();
+        return pageCustom;
+    }
+
+
+    @Override
+    public PageCustom<OrderResponse> getOrdersByUser(Long userId, Pageable pageable) {
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("Position", "id", userId));
+        Page<Order> orders = orderRepository.findAllByUser(user, pageable);
+        PageCustom<OrderResponse> pageCustom = PageCustom.<OrderResponse>builder()
+                .pageNo(orders.getNumber() + 1)
+                .pageSize(orders.getSize())
+                .totalPages(orders.getTotalPages())
+                .pageContent(orders.getContent().stream().map(order -> modelMapper.map(order, OrderResponse.class)).toList())
+                .build();
+        return pageCustom;
+    }
+
 
 
 }
